# le-utils

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  idforlabels.py  package.json  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: call-update-pr-spreadsheet.yml  finalized_specs.yml  npm-publish.yml  pre-commit.yml  pypi-publish.yml  pythontest.yml
docs/: README.md  constants.md
fle_utils/: constants.py
js/: CompletionCriteria.js  EmbedContentRequest.js  EmbedRequest.js  EmbedTopicsRequest.js  LearningObjectives.js  Library.js  MasteryCriteria.js  Modalities.js  RecommendationsRequest.js  Uuid.js  index.js  package.json
js/labels/: AccessibilityCategories.js  LearningActivities.js  Levels.js  Needs.js  ResourceType.js  Subjects.js  index.js
le_utils/: constants.py  humanhash.py  proquint.py  uuid.py
le_utils/constants/: completion_criteria.py  content_kinds.py  embed_content_request.py  embed_request.py  embed_topics_request.py  exercises.py  file_formats.py  file_types.py  format_presets.py  languages.py  learning_objectives.py  library.py  licenses.py  (+5 more)
scripts/: add_language.py  direction_guessed.rb  generate_from_specs.py  generate_labels.py  idforlabels.py
spec/: constants-completion_criteria.json  constants-library.json  constants-modalities.json  constants-uuid.json  definitions-embed_common.json  labels-v1.json  labels.json  recommendations-v1.json  schema-completion_criteria.json  schema-embed_content_request.json  schema-embed_request.json  schema-embed_topics_request.json  schema-learning_objectives.json  schema-mastery_criteria.json  schema-recommendations_request.json
tests/: test_exercises.py  test_formats.py  test_getformats.py  test_getlangs.py  test_kinds.py  test_labels.py  test_languages.py  test_library.py  test_licenses.py  test_presets.py  test_schemas.py  test_uuid.py
(+19 files in other folders)
