[metadata]
long_description = file: README.md

[flake8]
max-line-length = 160
max-complexity = 10

# Ignore non-PEP8-compliant rules so that the Black formatter can be used
ignore = E203,W503,E741

[isort]
atomic = true
multi_line_output = 5
line_length = 160
indent = '    '
combine_as_imports = true
